--- a/package.json
+++ b/package.json
@@ -2,17 +2,13 @@
   "name": "healthlens_project",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",  // <--- ADD THIS LINE
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "description": "",
   "dependencies": {
-    "dotenv": "^17.2.2",
-    "express": "^5.1.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "node-fetch": "^3.3.2"
   }
 }
